# CommunityBulletinBoard

./: README.md
CBB App/: .gitignore  .gitmodules  README.md
CBB App/CBB/CBB/: AddBoardViewController.swift  AddPostViewController.swift  AppDelegate.swift  CBB-Bridging-Header.h  CBBViewController.swift  ChangePasswordViewController.swift  CommentTableViewCell.swift  CommentsViewController.swift  CommunityTableViewCell.swift  CommunityViewController.swift  Info.plist  LoginViewController.swift  MenuTableViewCell.swift  MenuTableViewController.swift  PostView.swift  PostView.xib  PostsViewController.swift  SettingsViewController.swift  SignupViewController.swift  UserBoardTableViewCell.swift  UserBoardsViewController.swift  UserListTableViewCell.swift  UserListViewController.swift  ViewController.swift  ViewPostViewController.swift
CBB App/CBB/CBB.xcodeproj/: project.pbxproj
CBB App/CBB/CBB.xcodeproj/project.xcworkspace/xcshareddata/: CBB.xcscmblueprint
CBB App/CBB/CBB.xcodeproj/xcuserdata/erichchu.xcuserdatad/xcschemes/: CBB.xcscheme  xcschememanagement.plist
CBB App/CBB/CBB/Assets.xcassets/add-board-icon.imageset/: Contents.json
CBB App/CBB/CBB/Assets.xcassets/add-post-icon.imageset/: Contents.json
CBB App/CBB/CBB/Assets.xcassets/cork-back.imageset/: Contents.json
CBB App/CBB/CBB/Assets.xcassets/cork-back2.imageset/: Contents.json
CBB App/CBB/CBB/Assets.xcassets/cork-back3.imageset/: Contents.json
CBB App/CBB/CBB/Assets.xcassets/nav-bar.imageset/: Contents.json
CBB App/CBB/CBB/Assets.xcassets/post-it2.imageset/: Contents.json
CBB App/CBB/CBB/Base.lproj/: Main.storyboard
CBB App/CBB/CBBTests/: CBBTests.swift
CBB App/CBB/CBBUITests/: CBBUITests.swift
CBB App/Server/: CMakeLists.txt  HTTPServer.cpp  README.md  Server_Setup_Readme.md  auth.h  cert1.pem  client_http.hpp  client_https.hpp  database.h  fullchain1.pem  privkey1.pem  server_http.hpp  server_https.hpp
CBB App/Server/endpoints/: cbb.h  comment.h  functions.h  post.h  user.h
CBB App/Server/structures/: Comment.cpp  Comment.h  Community.cpp  Community.h  Post.cpp  Post.h  User.cpp  User.h  Utlityfunctions.cpp  Utlityfunctions.h
CBB App/Server/test/: test_auth_check.py  test_cbb_home.py  test_cbb_join.py  test_cbb_leave.py  test_cbb_new.py  test_cbb_search.py  test_cbb_userlist.py  test_comments_delete.py  test_comments_edit.py  test_comments_get.py  test_comments_new.py  test_login.py  test_logout.py  test_posts_delete.py  test_posts_edit.py  test_posts_get.py  test_posts_new.py  test_register.py
CBB App/Server/web/: index.html
